# python-dcm230

./: .pre-commit-config.yaml  CONTRIBUTING.MD  DEVELOPMENT.MD  LICENSE  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: codeql.yml  conventional-commit.yml  dco.yaml  dependency-review.yml  publish-to-pypi.yml  publish-to-test-pypi.yaml  publish-to-test-pypi.yml  pyright.yml  pytest.yml  ruff.yml  scorecard.yaml
src/dcm230/: __init__.py  dcm230.py  dcm230.pyi  test_dcm230.py
